# Setup_CP

./: .ycm_extra_conf.py  .zshrc  CMakeList.txt  CMakeLists.txt  README.md  _vimrc
.config/alacritty/: alacritty.yml
.config/awesome/: rc.lua
.config/nvim/: init.lua  map_key.vim
.config/nvim/lua/user/: keymaps.lua  plugins.lua  settings.lua  toggleterm.lua
.config/nvim/lua/user/lsp/: handlers.lua  lsp-installer.lua  null-ls.lua
.configvim/: beautiful.vim  map_key.vim  settings.vim  vim_plugs.vim
.template/: CMakeLists.txt  debug.h  tasks.json  template.cpp
Look cleaner/: _vimrc
Look cleaner/.config/: beautiful.vim  map_key.vim  settings.vim  vim_plugs.vim
nvim/: init.vim
nvim/.config/: beautiful.vim  map_key.vim  settings.vim  startify_config.vim  vim_plugs.vim
programming/: Makefile  download_problem.py  make_problem.sh
scripts/: build.sh  build_old.sh  interact.sh  make_problem.sh  make_problem_cmake.sh  parse_and_test.py  run_problem.sh
template/: cpp.sh  tempate.cpp
vim/.config/: beautiful.vim  map_key.vim  settings.vim  vim_plugs.vim
vim/.config/nvim/: init.lua  map_key.vim  settings.lua
vim/.config/nvim/lua/user/: cmp.lua  keymaps.lua  plugins.lua  settings.lua  treesitter.lua
vim/.config/nvim/lua/user/lsp/: handlers.lua  lsp-installer.lua  null-ls.lua
